fix(bug): fix navbar z-index and tooltip z-index

--- a/digitquest-frontend/src/tailwind.css
+++ b/digitquest-frontend/src/tailwind.css
@@ -63,3 +63,8 @@
     --secondary-bg: 0 4% 15%;
   }
 }
+
+@theme {
+  --color-navbarPrimary: #d5d9f7; 
+  --color-navbarSecondary: #D1D5DB;
+}
